[tool.poetry]
name = "biketowork-router"
version = "0.1.0"
description = "pgRouting-backed router with LTS weighting"
authors = ["OpenCode <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras=["standard"], version="^0.22.0"}
psycopg2-binary = "^2.9.6"
osm-lts = {version = "^0.5.0", source = "pypi"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
